<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <string name="jokenpo_pedra_papel_e_tesoura">Jokenpo: pedra, papel e tesoura</string>
    <string name="selecione_sua_jogada">Selecione sua jogada:</string>
    <string name="pedra">pedra</string>
    <string name="papel">papel</string>
    <string name="tesoura">tesoura</string>
    <string name="resultado">RESULTADO</string>
    <string name="dois">Dois</string>
    <string name="tres">Três</string>
    <string name="selecione_quantidade_rodadas">Selecione quantidade jogadores:</string>
    <string name="jokenpo">JoKenPo</string>
    <string name="jogada_computador">Jogada computador</string>
    <string name="selecione_a_quantidade_de_rodadas">Selecione a quantidade de rodadas:</string>
    <string name="configuracoes">Configurações</string>
    <string name="cinco">Cinco</string>

</resources>

